--- a/index.html
+++ b/index.html
@@ -253,11 +253,11 @@
             </p>
             <ul class="info-list">
                 <li>Немедленное уведомление фтизиатрической службы</li>
-                <li>Забор материала для микробиологической верификации</li>
-                <li>Помощь фтизиатра в определении ВИЧ-статуса умершего</li>
+                <li>Забор материала для микробиологической верификации в ГБУЗ МО МОКПТД</li>
+                <li>Фтизиатр поможет выяснить прижизненный ВИЧ-статус пациента</li>
                 <li>Обязательное посмертное определение ВИЧ-статуса при отсутствии прижизненных данных</li>
                 <li>Совместная оценка причины смерти с фтизиатром</li>
-                <li>Корректное оформление медицинской документации</li>
+                <li>Помощь в оформлении экстренного извещения (ф. 089/у)</li>
             </ul>
         </section>
 
