--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             <div class="contact-item">
                 <i class="fas fa-phone-alt"></i>
                 <div>
-                    <span class="contact-label">Телефон МОКПТД:</span>
+                    <span class="contact-label">Телефон горячей линии МОКПТД:</span>
                     <span class="contact-value">+7 (499) 978-02-43</span>
                 </div>
             </div>
