--- a/index.html
+++ b/index.html
@@ -249,7 +249,8 @@
         <!-- Назначение памятки (без заголовка) -->
         <section class="purpose-section">
             <p class="info-text">
-                Данная памятка содержит алгоритм действий для врачей-патологоанатомов и врачей-судебно-медицинских экспертов при обнаружении признаков туберкулеза на вскрытии.
+                Данная памятка содержит алгоритм действий для врачей-патологоанатомов и врачей-судебно-медицинских экспертов при обнаружении признаков туберкулеза на вскрытии.<br>Основание-Приказ МЗ МО № 1725
+О порядке взаимодействия врачей-патологоанатомов, врачей-судебно-медицинских экспертов и врачей-фтизиатров на территории Московской области.
             </p>
             <ul class="info-list">
                 <li>Немедленное уведомление фтизиатрической службы</li>
