--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                 <li>Фтизиатр поможет выяснить прижизненный ВИЧ-статус пациента</li>
                 <li>Обязательное посмертное определение ВИЧ-статуса при отсутствии прижизненных данных</li>
                 <li>Совместная оценка причины смерти с фтизиатром</li>
-                <li>Помощь в оформлении экстренного извещения (ф. 089/у)</li>
+                <li>Помощь в оформлении экстренного извещения (ф.089/у-туб)</li>
             </ul>
         </section>
 
