--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             <p>Филиал "Клинский"</p>
         </div>
         
-        <h2 class="title">Взаимодействие при подозрении на туберкулез</h2>
+        <h2 class="title">Взаимодействие при подозрении на туберкулез на вскрытии</h2>
         <p class="subtitle">Алгоритм для патологоанатомов и судмедэкспертов</p>
     </header>
 
@@ -249,7 +249,7 @@
         <!-- Назначение памятки (без заголовка) -->
         <section class="purpose-section">
             <p class="info-text">
-                Данная памятка содержит алгоритм действий для врачей-патологоанатомов и врачей-судебно-медицинских экспертов при обнаружении признаков туберкулеза на вскрытии.<br>Основание-Приказ МЗ МО № 1725
+                Основание-Приказ МЗ МО № 1725
 О порядке взаимодействия врачей-патологоанатомов, врачей-судебно-медицинских экспертов и врачей-фтизиатров на территории Московской области.
             </p>
             <ul class="info-list">
