--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
         <!-- Блок с QR-кодом - ТОЛЬКО ОДНА НАДПИСЬ СВЕРХУ -->
         <section class="qr-section">
-            <h3 class="qr-title">Актуальная версия памятки доступна по QR-коду</h3>
+            <h3 class="qr-title">Полная версия памятки и ссылка на приказ доступны по QR-коду</h3>
             
             <div class="qr-code-container">
                 <!-- ЗАГРУЗИТЕ ФАЙЛ qr_pamyatka.png В РЕПОЗИТОРИЙ -->
