--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                 <i class="fas fa-user-md"></i>
                 <div>
                     <span class="contact-label">Клинский филиал:</span>
-                    <span class="contact-value">Лукаш Игорь Александрович, 8-915-386-15-85 (при необходимости)</span>
+                    <span class="contact-value">Лукаш Игорь Александрович, 8-915-386-15-85 (координатор по оперативным вопросам)</span>
                 </div>
             </div>
             
