--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             <p>Филиал "Клинский"</p>
         </div>
         
-        <h2 class="title">Взаимодействие при подозрении на туберкулез на вскрытии</h2>
+        <h2 class="title">Взаимодействие c фтизиатрами<br>при подозрении на туберкулез на вскрытии</h2>
         <p class="subtitle">Алгоритм для патологоанатомов и судмедэкспертов</p>
     </header>
 
